<?xml version="1.0"?>
<package format="2">
    <name>carrier_ros_server</name>
    <version>0.0.0</version>
    <description>
        The hongdo robot web
    </description>
    <maintainer email="jeonghan@todo.todo">jeonghan</maintainer>
    <license>TODO</license>
    <buildtool_depend>catkin</buildtool_depend>
</package>